# zu

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  MAINTAINERS.md  Makefile  NOTICE  README.md  RELEASING.md  SECURITY.md  capabilities.md  conduit-architecture.md  pyproject.toml  zu-upstream-conformance.md
.github/: PULL_REQUEST_TEMPLATE.md  actionlint.yaml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: ci.yml  discord-notify.yml  gap-triage.yml  live.yml  publish.yml  redteam-image.yml  release-on-main.yml  render-image.yml
automation/gap-triage/: README.md  agent.yaml  triage.py
automation/gap-triage/fixtures/: capture.json
automation/gap-triage/tests/: conftest.py  test_triage.py
community/discord-bot/: .env.example  Dockerfile  README.md  _config.py  bot.py  requirements.txt
community/discord-bot/deploy/: zeke.service
community/discord-bot/deploy/gcp/: README.md  create-vm.sh  startup.sh
community/discord-bot/tests/: conftest.py  test_bot_config.py
docs/: ARCHITECTURE.md  BUILD_AN_AGENT.md  PHILOSOPHY.md  QUICKSTART.md  RED_TEAM.md  RED_TEAM_CONTAINER.md  TCB.md  agent-construction-sequence.md  capability-surface.md
docs/assets/: README.md
docs/community/: discord-setup.md
docs/designs/: issue-41-content-view.md  issue-41-worked-example.md
docs/navigation-reliability/: HARVEST.md
examples/: README.md  killer_demo.py  scripted_demo.py  task.example.yaml  zu.example.yaml
examples/agents/: README.md
examples/agents/article-summary/: README.md  agent.yaml  task.yaml  zu.yaml
examples/agents/article-summary/fixtures/: article.html
examples/agents/browser-widget/: README.md  agent.yaml
examples/agents/custom-tool/: README.md
examples/agents/custom-tool/tools/: greet.py
examples/agents/js-product/: README.md  agent.yaml
examples/agents/js-product/fixtures/: manifest.json  rendered.html  script.json  shell.html
examples/agents/price-extractor/: README.md  agent.yaml  task.yaml  zu.yaml
examples/agents/price-extractor/fixtures/: manifest.json  product.html  script.json
examples/agents/research-pipeline/: README.md  pipeline.py
examples/agents/vet-appointment/: .env.example  README.md  agent.yaml  track.json
examples/agents/vet-appointment/fixtures/: booking.html
examples/containment/: 01_floor_failclosed.sh  02_agent_in_container.sh  04_proxy_enforcement.sh  README.md  lib.sh
examples/integrations/: README.md  claude-code.mcp.json  codex-config.toml  cursor.mcp.json
examples/redteam_live/: README.md  live_gate.sh
images/: README.md
images/render-chromium/: Dockerfile  PROTOCOL.md  _browser_session.py  test_browser_session.py  test_zu_render.py  zu-browser  zu-render
validation/: README.md
validation/containment/: 00_build_image.sh  03_egress_allowlist.sh  04_proxy_enforcement.sh  README.md  lib.sh  run_all.sh
validation/redteam/: README.md  live_gate.sh
