# zu/pyproject.toml — uv workspace root
#
# This is the workspace root, not an installable package. It declares the
# member packages and wires them to resolve against each other locally
# (no publishing needed) via [tool.uv.sources].
[project]
name = "zu-workspace"
version = "0"
requires-python = ">=3.11"
# The virtual root depends on every member so `uv sync` installs the whole
# workspace editable. These resolve from [tool.uv.sources] below, not PyPI.
dependencies = [
    "zu-core",
    "zu-providers",
    "zu-tools",
    "zu-detectors",
    "zu-validators",
    "zu-backends",
    "zu-cli",
    "zu-runtime",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
zu-core       = { workspace = true }
zu-providers  = { workspace = true }
zu-tools      = { workspace = true }
zu-detectors  = { workspace = true }
zu-validators = { workspace = true }
zu-backends   = { workspace = true }
zu-cli        = { workspace = true }
zu-runtime    = { workspace = true }

# Dev tooling installed by `uv sync` (PEP 735 dependency group).
[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "mypy>=1.8",
    "cryptography>=42",   # exercises zu-backends[encryption] in CI
    "anthropic>=0.40",    # exercises zu-providers[anthropic] in CI
    "openai>=1.40",       # exercises zu-providers[openai] in CI
    "fastapi>=0.110",     # exercises `zu serve` (the serve extra) in tests
    "httpx",              # FastAPI TestClient transport
    "docker>=7",          # exercises the local-docker backend (real tier-2 render)
    "mcp>=1.2",           # exercises `zu mcp` (the MCP server) in tests
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["packages"]
addopts = "-q"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
# Ports and contracts are the load-bearing types; check them strictly.
# Adapters can tighten over time.
warn_unused_ignores = true
